--- a/app/views/galleries/_gallery.html.haml
+++ b/app/views/galleries/_gallery.html.haml
@@ -1,4 +1,4 @@
-= div_for gallery, class: 'gallery-grid-item', data: { created_at: gallery.created_at } do
+= div_for gallery, class: 'gallery-grid-item', data: { created_at: gallery.created_at } do 
   .card
     .card-image.waves-effect.waves-block.waves-light
       = link_to gallery do
@@ -12,6 +12,11 @@
         Card Title
         %i.material-icons.right close
       %p Lorem ipsum dolor sit amet, nonummy ligula volutpat hac integer nonummy. Suspendisse ultricies, congue etiam tellus, erat libero, nulla eleifend, mauris pellentesque. Suspendisse integer praesent vel, integer gravida mauris, fringilla vehicula lacinia non
+      // - binding.pry
+      .edit-form{id: "gallery_edit_form_#{gallery.id}"} 
       .delete-gallery-button
         = button_to gallery, class: 'gallery-button-default btn waves-effect', method: :delete, data: { confirm: "Are you sure? ALL GALLERY ITEMS WILL BE DELETED!", disable_with: "Please wait..." }, remote: true do
           = icon('fa fa-trash-o fa-lg')
+      .rename-gallery-button
+        = button_to edit_gallery_path(gallery), class: 'gallery-button-default btn waves-effect', method: :get, remote: true do
+          %i.large.material-icons mode_edit
