--- a/app/views/galleries/_form.html.haml
+++ b/app/views/galleries/_form.html.haml
@@ -11,5 +11,5 @@
     - else
       - button_name = 'Save'
     
-  = f.submit button_name, class: 'btn waves-effect right gallery-button-default', data: { disable_with: "Uploading..." }
+  = f.submit button_name, class: 'btn waves-effect right gallery-button-default', data: { disable_with: "Working..." }
   = f.text_field :title, placeholder: :title
