--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -10,6 +10,13 @@ body {
   flex: 1;
 }
 
+nav {
+  background-color: initial;
+  box-shadow: none;
+  
+  ul a { color: rgba(0, 0, 0, 0.65); }
+}
+
 .card-button {
   border-color: none;
   border-width: 0;
