--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -1,21 +1,21 @@
 .center-align.header-wrapper.title-header
   .header.valign= @gallery.title
-  = form_for @gallery, url: gallery_gallery_images_path(@gallery), method: :post do |f|
-    #hide-whole
-      .hide-input
-        = f.file_field :gallery_images, multiple: true
-      .fake-button.btn.waves-effect.transparent
-        Add
-        = icon 'fa fa-picture-o fa-lg', id: 'gallery-image-icon'
-    = f.submit 'Upload', class: 'btn waves-effect gallery-button-default transparent gallery-upload-button', data: { disable_with: "Uploading..." }
+  
+.center-align
+  .add-new-images-form
+    = form_for :gallery, url: gallery_gallery_images_path(@gallery), method: :post do |f|
+      #hide-whole
+        .hide-input
+          = f.file_field :gallery_images, multiple: true
+        .fake-button.btn.waves-effect.transparent
+          Add
+          = icon 'fa fa-picture-o fa-lg', id: 'gallery-image-icon'
+      = f.submit 'Upload', class: 'btn waves-effect gallery-button-default transparent gallery-upload-button', data: { disable_with: "Uploading..." }
 
     
     
-  %hr#gallery-sorting-line
+  %hr#gallery-sorting-line.padded
 
 .gallery-image-grid.chocolat-parent
   .gallery-image-grid-sizer
-  - @gallery.gallery_images.order(created_at: :desc).each do |i|
-    .gallery-grid-image-item
-      = link_to i.image.url, class: 'chocolat-image' do
-        = cl_image_tag i.image
+  = render @gallery_images
