--- a/app/views/galleries/_gallery.html.haml
+++ b/app/views/galleries/_gallery.html.haml
@@ -12,11 +12,9 @@
         Card Title
         %i.material-icons.right close
       %p Lorem ipsum dolor sit amet, nonummy ligula volutpat hac integer nonummy. Suspendisse ultricies, congue etiam tellus, erat libero, nulla eleifend, mauris pellentesque. Suspendisse integer praesent vel, integer gravida mauris, fringilla vehicula lacinia non
-      // - binding.pry
-      .edit-form{id: "gallery_edit_form_#{gallery.id}"} 
-      .delete-gallery-button
-        = button_to gallery, class: 'gallery-button-default btn waves-effect', method: :delete, data: { disable_with: "Please wait..." }, remote: true do
-          = icon('fa fa-trash-o fa-lg')
+      .edit-gallery-form{id: "gallery_edit_form_#{gallery.id}"} 
+      = button_to delete_get_data_gallery_path(gallery), class: 'gallery-button-default btn waves-effect delete-gallery-button', form_class: 'delete-gallery-form', data: { modal: 'confirm-delete-gallery' }, method: :post, remote: true do
+        = icon('fa fa-trash-o fa-lg')
       .rename-gallery-button
         = button_to edit_gallery_path(gallery), class: 'gallery-button-default btn waves-effect', method: :get, remote: true do
           %i.large.material-icons mode_edit
