--- a/app/views/galleries/_form.html.haml
+++ b/app/views/galleries/_form.html.haml
@@ -13,3 +13,4 @@
     
   = f.submit button_name, class: 'btn waves-effect right gallery-button-default', data: { disable_with: "Working..." }
   = f.text_field :title, placeholder: :title
+  = f.text_field :description, placeholder: :description
