--- a/app/views/events/_calendar.haml
+++ b/app/views/events/_calendar.haml
@@ -1,7 +1,7 @@
 = month_calendar events: events do |date, events|
   .content{id: date}
     .buttons
-      = edit_events_button 'btn-floating edit-button', { target: 'event-modal', url: fetch_for_edit_events_path, start_time: "#{date}" }, 'large material-icons' if events.any?
+      = edit_events_button 'btn-floating edit-button', { url: fetch_for_edit_events_path, start_time: "#{date}" }, 'large material-icons' if events.any?
       = button_tag feeds_path, class: 'btn-floating' do
         = icon('fa fa-plus')
       %a.btn-floating
