Layout rebase, logic changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "materialize/components/color";
-$primary-color: color("blue", "lighten-2") !default;
+$primary-color: color("blue-grey", "base") !default;
 // $secondary-color: color("blue", "lighten-2") !default;
 // $success-color: color("green", "base") !default;
 // $link-color: color($primary-color, "darken-1") !default;
