--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -6,10 +6,6 @@ body.controller-events {
   background-color: rgba(241, 241, 241, 0.25)
 }
 
-#new_todo_form {
-  //display:none;
-}
-
 #loading{
   display: none;
   width: 100%;
@@ -31,7 +27,10 @@ body.controller-events {
     }
   }
 }
+
 #event_fields {
+  overflow-y:auto;
+  
   .event-field {
     .time-select {
       display: inline;
@@ -52,98 +51,56 @@ body.controller-events {
   }
 }
 
-.simple-calendar {
-  .calendar-heading {
-    padding: 10px 0;
-    
-    .calendar-title {
-      .month {
-        text-transform: uppercase;
-        font-weight: 300;
-        font-size: 2rem;
-        letter-spacing: 2rem;
-        display: inline-block;
-      }
-      
-      %span {
-        letter-spacing: initial;
-        font-size: initial;
-      }
-      
-      .month-navigation {
-        text-transform: uppercase;
-        font-weight: 300;
-        padding-top: 15px;
-      }
-    }
-    
-    .year {
+.calendar-heading {
+  padding: 10px 0;
+  
+  .calendar-title {
+    .month {
       text-transform: uppercase;
       font-weight: 300;
+      font-size: 2rem;
+      letter-spacing: 2rem;
+      display: inline-block;
+    }
+    
+    %span {
+      letter-spacing: initial;
+      font-size: initial;
+    }
+    
+    .month-navigation {
+      text-transform: uppercase;
+      font-weight: 300;
+      padding-top: 15px;
     }
   }
   
+  .year {
+    text-transform: uppercase;
+    font-weight: 300;
+  }
+}
+
+.simple-calendar {
+  
+  .todays-date {
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+  }
+
   .day {
-    border: 1px solid #ccc;
-    margin-right: -1px;
-    margin-bottom: -1px;
-    height: 100px;
-
-    &:hover {
-      // @extend: $primary-color;
-      transition: all 0.5s ease;
-      
-      .buttons {
-        display: block;
-      }
-    }
+    &:hover { cursor: pointer; }
   }
-      
-  .content {
-    .buttons {
-      position: absolute;
-       display: none;
-      
-      .btn-floating {
-        border-radius: initial;
-       
-        &:hover {
-          border-radius: 50%;
-        }
-      }
-    }
-    
-    .date {
-      float: right;
-      padding-right: 5px;
-    }
-        
 
-    // 
-    // padding: 10px 0px;
-    
-    .event {
-      font-size: 12px;
-      display: block;
-      clear: both;
-      // @extend .purple, .accent-4;
-      padding: 0px 10px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-     
-     span {
-        font-size: 10px;
-     }
+  table {
+    td, th {
+       border-radius: initial;
+      padding: initial;
+      padding: 10px 0;
     }
   }
   
-
   
-  
-  
-
-
   .wday-0 {}
   .wday-1 {}
   .wday-2 {}
@@ -152,38 +109,43 @@ body.controller-events {
   .wday-5 {}
   .wday-6 {}
 
-  .today {} 
+  .today { @extend .deep-purple} 
   .past {}
   .future {}
 
-  .start-date {}
+  .start-date { }
 
   .prev-month, .next-month {}
   
   .current-month {}
 
-  .has-events {}
+  .has-events {
+    @extend .purple, .lighten-5
+  }
 }
 
-#card-panel {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 40%;
-  margin-top: -50px;
-  margin-left: -100px;
- 
-  // margin: 2.5rem 0 0 2.5rem;
-  // background-color: red;
+#card-panel-month {
+  .upcoming-date-month, .upcoming-date-number {
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
   
-  .date-with-words {
+  .upcoming-date-number {
+    font-size: 2rem;
+  }
+  
+  .row-group-divider {
+    padding: 5px 0;
+  }
+}
+
+
+#card-panel-day {
+
+  .seleted-date, .todays-events {
     text-transform: uppercase;
     letter-spacing: .1rem;
   }
-  
-  .close-button {
-    background-color: white;
-    border: none;
-  }
-  
 }
