--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,10 +1,6 @@
-= div_for event  do |event|
-  .col.s4
-    .card
-      .card-content
-        .card-title= event.name
-      .card-action
-        = button_to 'Delete', event, class: 'card-button red-text', remote: true
-        
-        //Edit list 
-        = link_to "Details", "#"
+.card
+  .card-content
+    = div_for event  do |event|
+      = event.name
+      %br= event.start_time.strftime('%H:%M %p')
+      // = button_to 'Delete', event, class: 'card-button red-text', remote: true
