--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,5 +1,8 @@
-= semantic_form_for @event, remote: true do |f|
-  #error_explanation
-  .input-field
-    = f.input :name, "placeholder": "Name"
-    = f.action :submit, button_html: { class: "btn waves-effect light-blue darken-2" }
+.row
+  = semantic_form_for @event, remote: true do |f|
+    #error_explanation
+    #event_fields
+      .event-field
+        .time-select= f.time_select(:start_time)
+        .title= f.text_field :name
+        %br= submit_tag "Create", class: 'btn waves-effect light-blue darken-2', id: 'create-event-button'
