--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -1,24 +1,34 @@
-.simple-calendar
+.row
   .calendar-heading.center-align
     %span.calendar-title
       = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: 'left month-navigation'
       .month= t('date.month_names')[start_date.month]
       = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'right month-navigation'
     .year= start_date.year
-      
 
-  .row.seven-cols
-    - date_range.slice(0, 7).each do |day|
-      .col.s1.m1.l1.center-align
-        %th= t('date.abbr_day_names')[day.wday]
-
-  - date_range.each_slice(7) do |week|
-    .row.seven-cols
-      - week.each do |day|
-        .col.s1.m1.l1
-          = content_tag :div, class: calendar.td_classes_for(day) do
-            - if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block)
-              - capture_haml(day, sorted_events.fetch(day, []), &block)
-            - else
-              - block.call day, sorted_events.fetch(day, [])
-
+.row
+  .col.m4.s12.l3
+    .simple-calendar
+      .card-panel
+        .center-align.todays-date= Date.current.strftime('%B %e')
+        %table.table
+          %thead
+            %tr
+              - date_range.slice(0, 7).each do |day|
+                %th= t('date.abbr_day_names')[day.wday]
+            %tbody
+              - date_range.each_slice(7) do |week|
+                %tr
+                  - week.each do |day|
+                    = content_tag :td, class: calendar.td_classes_for(day) << 'center-align', data: { url: fetch_for_edit_events_path, start_time: day } do
+                      - if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block)
+                        - capture_haml(day, sorted_events.fetch(day, []), &block)
+                      - else
+                        - block.call day, sorted_events.fetch(day, [])
+    
+    #card-panel-day.card-panel
+      = render partial: 'todays_events', locals: { events: @todays_events }
+  .col.m8.s12.l9
+    #card-panel-month.card-panel
+      = render partial: 'upcoming_events', locals: { events: @this_month_events }
+    
