--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -105,9 +105,7 @@ body.controller-events {
   
   .eqi-container .event-dot {
     flex-grow: 1;
-    height: 4px;
-    // width: 100%;
-    width: 4px;
+    height: 2px;
     background-color: red;
     // border-radius: 50%;
   }
@@ -145,6 +143,10 @@ body.controller-events {
 }
 
 #card-panel-month {
+  .upcoming-events {
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+  }
   .upcoming-date-month, .upcoming-date-number {
     text-transform: uppercase;
     letter-spacing: .1rem;
