--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -171,3 +171,10 @@ body.controller-events {
     letter-spacing: .1rem;
   }
 }
+
+#new-event {
+  .new-event-label {
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+  }
+}
