--- a/app/views/events/_todays_events.html.haml
+++ b/app/views/events/_todays_events.html.haml
@@ -1,3 +1,3 @@
-.todays-events.center-align Today's events
-= render 'form'
-= render events
+.row
+  .todays-events.center-align Today's events
+  = render events
