--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -1,1 +1,3 @@
-$('#card-panel-day').html("<%= j render 'fetch_events', locals: {events: @events, date: @date} %>")
+$('#card-panel-day').html("<%= j render partial: 'fetch_events', locals: {events: @events, date: @date} %>")
+$('#card-panel-week').html("<%= j render partial: 'upcoming_events', locals: {events: @events_week_in_advance} %>")
+$('#new-event').html("<%= j render 'form' %>")
