--- a/app/views/events/fetch_for_edit.js.erb
+++ b/app/views/events/fetch_for_edit.js.erb
@@ -1,2 +1,2 @@
-$('#card-panel-day').html("<%= j render 'fetch_events' %>")
+$('#card-panel-day').html("<%= j render partial: 'fetch_events' %>")
 $('#new-event').html("<%= j render 'form' %>")
