--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,7 +4,7 @@
       .date
         = date.day
       .eqi-container.center-align
-        - events.any? do
+        - if events.present?
           - events.group_by {|event| event.color }.each do |color, events_for_color|
             .event-dot{class: color}
       
