--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,8 +1,6 @@
 .new-event-label.center-align 
-  Add new event
-  - if @event.new_record?
-    to
-    = @event.start_time.strftime('%B %e') 
+  Add new event to
+  = @event.start_time.strftime('%B %e') 
 = semantic_form_for @event, remote: true do |f|
   #error_explanation
   #event_fields
