Mobile layout number selecting on date fix

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -95,6 +95,10 @@ body.controller-events {
 
   .day {
     &:hover { cursor: pointer; }
+    
+  }
+  [data-visual-label-day]:before {
+    content: attr(data-visual-label-day) "";
   }
   
   .eqi-container {
