--- a/app/views/events/_todays_events.html.haml
+++ b/app/views/events/_todays_events.html.haml
@@ -2,5 +2,5 @@
   .todays-events.center-align Today's events
   = render events
 - else
-  .todays-events.center-align no events today
+  .todays-events.center-align no upcoming events today
 
