Isotope for upcoming events, filtering by color

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -149,6 +149,11 @@ body.controller-events {
     text-transform: uppercase;
     letter-spacing: .1rem;
   }
+  
+  .grid-item-upcoming-event {
+    width: 100%;
+    box-sizing: border-box;
+  }
   .upcoming-date-month, .upcoming-date-number {
     text-transform: uppercase;
     letter-spacing: .1rem;
