--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -56,3 +56,16 @@ nav {
 }
 
 // classes += 'alert-info'
+
+.transparent-uppercase {
+  display: inline-block;
+  background-color: white;
+  box-shadow: none;
+  color: rgba(0, 0, 0, 0.87);
+
+  &:hover, &:focus {
+    background-color: rgb(33, 33, 33);
+    box-shadow: none;
+    color: white;
+  }
+}
