--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,6 +1,7 @@
-.card
-  .card-content
-    = div_for event  do |event|
+= div_for event, class: "#{ grid_item_class ||= ''} color-#{ event.color }" do |event|
+  .card
+    .card-content
       = event.name
       %br= event.start_time.strftime('%H:%M %p')
+      = event.color
       // = button_to 'Delete', event, class: 'card-button red-text', method: :delete, remote: true
