--- a/app/views/events/_upcoming_events.html.haml
+++ b/app/views/events/_upcoming_events.html.haml
@@ -1,14 +1,15 @@
-- if events.present?
-  .upcoming-events.center-align upcoming events
-  - events.group_by {|event| event.start_time.to_date }.each do |start_time, events_for_date| 
-    .row.row-group-divider
-      .col.l2.m2.s2
-        .upcoming-date-number= start_time.strftime('%e')
-        .upcoming-date-month= start_time.strftime('%a')
-      .col.l10.m10.s10
-        = render events_for_date
-  
-  = button_to new_event_path, class: 'btn-floating', method: :get, remote: true do
-    = icon('fa fa-plus')
-- else
-  .upcoming-events.center-align No upcoming events
+.grid-upcoming-events
+  - if events.present?
+    .upcoming-events.center-align.stamp upcoming events
+    - events.group_by {|event| event.start_time.to_date }.each do |start_time, events_for_date| 
+      // .row.row-group-divider
+      //   .col.l2.m2.s2
+      //     .upcoming-date-number= start_time.strftime('%e')
+      //     .upcoming-date-month= start_time.strftime('%a')
+      //   .col.l10.m10.s10
+      = render partial: events_for_date, locals: { grid_item_class: 'grid-item-upcoming-event'}
+    
+    // = button_to new_event_path, class: 'btn-floating', method: :get, remote: true do
+    //   = icon('fa fa-plus')
+  - else
+    .upcoming-events.center-align No upcoming events
