Jquery selected day in calendar, AJAX calendar event dots update

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -113,6 +113,8 @@ body.controller-events {
   }
 
   table {
+    table-layout: fixed;
+    
     td, th {
        border-radius: initial;
       padding: initial;
@@ -129,7 +131,9 @@ body.controller-events {
   .wday-5 {}
   .wday-6 {}
 
-  .today { @extend .deep-purple} 
+  .today { 
+    @extend .deep-purple;
+  } 
   .past {}
   .future {}
 
