--- a/app/views/events/fetch_for_edit.js.erb
+++ b/app/views/events/fetch_for_edit.js.erb
@@ -1,2 +1,4 @@
 $('#card-panel-day').html("<%= j render partial: 'fetch_events' %>")
 $('#new-event').html("<%= j render 'form' %>")
+$('.today').removeClass('today')
+$('#<%= @date %>').parent().parent().addClass('today')
