--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,8 +1,8 @@
 #events_calendar
   = month_calendar events: @events do |date, events|
-    .content{id: date}
+    .content
       .date{"data-visual-label-day": date.day }
-      .eqi-container.center-align
+      .eqi-container.center-align{id: date}
         - if events.present?
           - events.group_by {|event| event.color }.each do |color, events_for_color|
             .event-dot{class: color}
