--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -19,7 +19,7 @@
           %thead
             %tr
               - date_range.slice(0, 7).each do |day|
-                %th= t('date.abbr_day_names')[day.wday]
+                %th.center-align= t('date.abbr_day_names')[day.wday]
             %tbody
               - date_range.each_slice(7) do |week|
                 %tr
