Isotope upcoming events sorted start time

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -131,9 +131,7 @@ body.controller-events {
   .wday-5 {}
   .wday-6 {}
 
-  .today { 
-    @extend .deep-purple;
-  } 
+  .today { @extend .deep-purple; } 
   .past {}
   .future {}
 
