--- a/app/views/events/_todays_events.html.haml
+++ b/app/views/events/_todays_events.html.haml
@@ -1,6 +1,6 @@
 - if events.present?
-  .todays-events.center-align Today's events
+  .todays-events.center-align.stamp Today's events
   = render events
 - else
-  .todays-events.center-align no upcoming events today
-
+  .todays-events.center-align.stamp no upcoming events today
+  
