--- a/app/views/events/_fetch_events.html.haml
+++ b/app/views/events/_fetch_events.html.haml
@@ -1,9 +1,11 @@
-- if @events.present?
-  .todays-events.center-align
-    = @date.to_date.strftime('%B %e')
-    events
-  = render @events
-- else
-  .todays-events.center-align
-    no events on
-    = @date.to_date.strftime('%B %e')
+#card-panel-day-label.stamp
+  - date ||= Date.current
+  - if events.present?
+    .todays-events.center-align.stamp 
+      = date.to_date.strftime('%B %e')
+      events
+    
+  - else
+    .todays-events.center-align.stamp 
+      no upcoming events
+      = (date == Date.current)? 'today' : "on #{date.to_date.strftime('%B %e')}"
