--- a/app/views/events/_upcoming_events.html.haml
+++ b/app/views/events/_upcoming_events.html.haml
@@ -1,6 +1,6 @@
 .grid-upcoming-events
   - if events.present?
-    .upcoming-events.center-align.stamp upcoming events
+    .upcoming-events.center-align.stamp upcoming events (next 2 weeks)
     - events.group_by {|event| event.start_time.to_date }.each do |start_time, events_for_date| 
       // .row.row-group-divider
       //   .col.l2.m2.s2
