--- a/app/views/events/_todays_events.html.haml
+++ b/app/views/events/_todays_events.html.haml
@@ -1,6 +1,7 @@
-- if events.present?
-  .todays-events.center-align.stamp Today's events
-  = render events
-- else
-  .todays-events.center-align.stamp no upcoming events today
-  
+#card-panel-day-label.stamp
+  - if events.present?
+    .todays-events.center-align.stamp today's events 
+    = render events
+  - else
+    .todays-events.center-align.stamp no events today
+
